Wed Jul 16 23:01:43 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): support array of
	  VT_RECORD variant.

Wed Jul 16 20:21:49 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* vm_core.h (struct rb_iseq_struct): stack_max is changed to int
	  because all calculations related to stack_max in compile.c
	  (iseq_set_sequence) and vm_insnhelper.c (vm_push_frame) are
	  conducted by using int. This partly reverts r23945.
	* vm_insnhelper.c (vm_push_frame): ditto. This reverts r42401.

Wed Jul 16 19:55:32 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* vm_core.h (struct rb_iseq_struct): temporal workaround of [Bug 10037].
	  Add padding on big-endian 64-bit architecture (e.g. sparc64).

Wed Jul 16 19:32:23 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_record_method_missing): call
	  rb_hash_fetch instead of rb_hash_aref.

Wed Jul 16 18:08:47 2014  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_defined_string): use rb_gc_mark_object() instead of
	  marking from vm_mark().

	* vm.c (rb_vm_mark): ditto.

Wed Jul 16 18:03:50 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_roots): call rb_vm_mark directly.

	* vm.c: remove mark function for RubyVM object because
	  RubyVM object marked manually.

Wed Jul 16 12:25:39 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c: Merge Onigmo 5.14.1 25a8a69fc05ae3b56a09.
	  this includes Support for Unicode 7.0 [Bug #9092].

Tue Jul 15 23:59:27 2014  Jared Jennings  <jared.jennings.ctr@us.af.mil>

	* ext/digest: make built-in digest function implementations
	  indicate success or failure of init and final functions.
	  [ruby-core:61614] [Bug #9659]

	* ext/digest/digest.c: expect digest init and finish functions to
	  indicate success or failure; raise exception on failure.
	  [ruby-core:61614] [Bug #9659]

Tue Jul 15 20:31:40 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: modify document for WIN32OLE_RECORD.
