@@ -1,3 +1,8 @@
+Thu Jul 17 19:57:27 2014  Herwin  <herwin@quarantainenet.nl>
+
+	* ext/thread/thread.c (rb_szqueue_push): add optional parameter,
+	  non_block defaulted to false.  [ruby-core:63794] [Feature #10052]
+
 Wed Jul 16 23:01:43 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c (ole_variant2val): support array of
